--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-2"}
+rr2"}
 <!DOCTYPE html>
 <html>
 <head>
@@ -19,7 +19,7 @@ if(tool){
 const storedUser = localStorage.getItem("nfc_user");
 if(storedUser){
 const formURL = "https://app.smartsheet.com/b/form/019c51824f0475fd8bf178284fbb0ecb"
-+ "?DutyManagerName=" + encodeURIComponent(storedUser)
++ "?Removed Name/Stamp=" + encodeURIComponent(storedUser)
 + "&Part Number=" + encodeURIComponent(tool);
 
 window.location.href = formURL;
